# rerun-robotics

./: pyproject.toml
rerun_robotics/: __init__.py  spot.py
rerun_robotics/spot_description/: mobile_model.urdf
