[project]
name = "rerun-robotics"
version = "0.0.7"
description = "Robotics visualization using Rerun"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = ["robotics", "visualization"]
authors = [
    { name = "William Shen", email = "willshen@mit.edu" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "pybullet",
    "rerun-sdk>=0.18.0",
    "trimesh",
    "tqdm",
    "yourdfpy",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
]

[project.urls]
"Source" = "https://github.com/williamshen-nz/rerun-robotics"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages]
find = { include = ["rerun_robotics"] }

[tool.setuptools.package-data]
rerun_robotics = ["spot_description/**"]

[tool.black]
line-length = 120

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
